[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/coin/Glitter.png" type="Texture" id=1]
[ext_resource path="res://images/coin/Coin.png" type="Texture" id=2]
[ext_resource path="res://scenes/coin/coin.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 148.486

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.494565, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 100, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 1.0
scale_curve = SubResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Coin" type="RigidBody2D"]
position = Vector2( 0, 1 )
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
angular_velocity = 10.0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.103065, 0.103065 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="CollisionShape2D"]
scale = Vector2( 1.13454, 1.04513 )
amount = 3
lifetime = 0.5
draw_order = 1
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
__meta__ = {
"_editor_description_": "Death timer"
}

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
